--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@ p[Skills]{
     -o-background-size: cover;
     background-size: cover; 
 }
+.card-body p{
+    font-size: 20px;
+    font-family: 'Arvo', serif;
+    font-weight: 300;
+    color: #0a0a0a;
+}
